CD/donationsdesk-deployment.yaml
# Create the App Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-site-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-site
  template:
    metadata:
      labels:
        app: ecommerce-site
    spec:
    # Specify the container
      containers:
        - name: ecommerce-site
          image: prengineer/ecommerce-site:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 80
          # Add the volume
          volumeMounts:
          - mountPath: "/config"
            name: ecommerce-site-pv-storage
      # Specify the volume
      volumes:
      - name: ecommerce-site-pv-storage
        persistentVolumeClaim:
          claimName: ecommerce-site-pv-claim
