CD/ingress.yaml
# Ingress for the eCommerce application

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Use the Production Let's Encrypt Issuer
    cert-manager.io/cluster-issuer: letsencrypt-production
    # This ingress is for Traefik
    spec.ingressClassName: traefik
    # Redirect all traffic to HTTPS, always
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    app: ecommerce-site
  name: ecommerce-site
  # Deploy to meetspa namespace
  namespace: meetspa
spec:
  rules:
  # Change to your domain
  - host: meetspa.jlpc.dns1.us
    http:
      paths:
      - backend:
          service:
            name: ecommerce-site
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    # Change to your domain
    - meetspa.jlpc.dns1.us
    secretName: ecommerce-site-tls
